fixed message misalignment and horizontal scrolling

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -32,13 +32,14 @@ body {
 }
 
 .sentMessage {
+    text-align: left;
     float: right;
     color: white;
     background-color: #1982fc;
     border-radius: 5px;
     padding: 10px;
     margin: 5px;
-    max-width: 100%;
+    max-width: 90%;
 }
 
 .receivedMessage {
@@ -49,5 +50,5 @@ body {
     padding: 10px;
     margin: 5px;
     width: max-content;
-    max-width: 100%;
+    max-width: 90%;
 }
